updated login system - need to convert to users table from Administration

--- a/ProfileMatch.Sites/Admin/AdminDashboard.razor
+++ b/ProfileMatch.Sites/Admin/AdminDashboard.razor
@@ -5,6 +5,7 @@
     <MudTabPanel Text="Users">
         <AdminPeopleList />
     </MudTabPanel>
+    <MudTabPanel Text="Administration"><Administration/></MudTabPanel>
     <MudTabPanel Text="Departments">
         <AdminDepartmentList />
     </MudTabPanel>
