email confirmation preparation

--- a/ProfileMatch.Components/Admin/Administration.razor
+++ b/ProfileMatch.Components/Admin/Administration.razor
@@ -1,5 +1,4 @@
-﻿@page "/administration"
-@using Microsoft.AspNetCore.Authorization;
+﻿@using Microsoft.AspNetCore.Authorization;
 @using Microsoft.AspNetCore.Identity;
 @inject UserManager<ApplicationUser> _UserManager
 @inject RoleManager<IdentityRole> _RoleManager
