--- a/ProfileMatch.Web/_Imports.razor
+++ b/ProfileMatch.Web/_Imports.razor
@@ -11,6 +11,7 @@
 @using ProfileMatch.Components.Culture
 @using ProfileMatch.Components.Layout
 @using ProfileMatch.Components.Theme
+@using MudBlazor 
 
 @using ProfileMatch.Services
 @using ProfileMatch.Contracts
