--- a/ProfileMatch.Components/Dialogs/AdminUserDialog.razor
+++ b/ProfileMatch.Components/Dialogs/AdminUserDialog.razor
@@ -5,7 +5,12 @@
 else
 {
 
-    <p>Editor: <br />@currentUserName</p>
+    <MudItem Class="d=inline"><p>
+    <InputFile id="fileInput" OnChange="UploadFile" hidden accept="image/*" />
+    Avatar:
+    <MudButton DisableElevation="true" HtmlTag="label" for="fileInput"> <MudAvatar Image="@EditedUser.PhotoPath" /></MudButton>
+</p>
+</MudItem>
     <MudDialog>
         <DialogContent>
             <MudForm @ref="Form">
@@ -20,9 +25,7 @@ else
                         <MudSelectItem Value="@(dept.Id)">@dept.Name</MudSelectItem>
                     }
                 </MudSelect>
-                <InputFile id="fileInput" OnChange="UploadFile" hidden accept="image/*" />
-               
-                <MudButton DisableElevation="true" HtmlTag="label" for="fileInput"> <MudAvatar Image="@EditedUser.PhotoPath" /></MudButton>
+                
                 <MudSwitch @bind-Checked="@EditedUser.IsActive"
                            T="bool"
                            Label="Is Active?"
