--- a/ProfileMatch.Components/User/LoginDisplay.razor
+++ b/ProfileMatch.Components/User/LoginDisplay.razor
@@ -2,10 +2,11 @@
     <Authorized>
         <a href="Identity/Account/Manage">Hello, @context.User.Identity.Name!</a>
         <form method="post" action="Identity/Account/LogOut">
-            <button type="submit" class="nav-link btn btn-link">Log out</button>
+            <button type="submit" >Log out</button>
         </form>
     </Authorized>
     <NotAuthorized>
+        <MudFab />
         <a href="Identity/Account/Register">Register</a>
         <a href="Identity/Account/Login">Log in</a>
     </NotAuthorized>
