--- a/ProfileMatch.Components/User/UserCard.razor
+++ b/ProfileMatch.Components/User/UserCard.razor
@@ -3,7 +3,7 @@
     <MudCard Elevation="0" Square="true" Class="@Class" Style="@Style">
         <MudCardHeader>
             <CardHeaderAvatar>
-                <MudAvatar Image="@CurrentUser.PhotoPath" />
+                <MudAvatar Image="@CurrentUser?.PhotoPath" />
             </CardHeaderAvatar>
             <CardHeaderContent>
                 <MudText Typo="Typo.body2">FirstName LastName</MudText>
