--- a/ProfileMatch.Components/_Imports.razor
+++ b/ProfileMatch.Components/_Imports.razor
@@ -21,3 +21,4 @@
 @using ProfileMatch.Models.Enumerations
 @using Microsoft.AspNetCore.Identity
 @using ProfileMatch.Models.ViewModels
+@using ProfileMatch.Components.User
