--- a/ProfileMatch.Web/_Imports.razor
+++ b/ProfileMatch.Web/_Imports.razor
@@ -16,3 +16,6 @@
 @using ProfileMatch.Services
 @using ProfileMatch.Contracts
 @using ProfileMatch.Sites
+@using ProfileMatch.Components.User
+@using ProfileMatch.Components.Authentication
+@attribute [Authorize]
