--- a/ProfileMatch.Components/Layout/NavMenu.razor
+++ b/ProfileMatch.Components/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<UserCard Style="background-color: var(--mud-palette-drawer-background);color: var(--mud-palette-drawer-text);"/>
+﻿<UserCard CurrentUser="CurrentUser" Style="background-color: var(--mud-palette-drawer-background);color: var(--mud-palette-drawer-text);"/>
 <MudDivider Class="mb-4" />
 <MudNavMenu>
     <MudNavLink Href="user/dashboard" Icon="@Icons.Material.Outlined.Dashboard">Dashboard</MudNavLink>
@@ -6,3 +6,6 @@
     <MudNavLink Href="admin/dashboard" Icon="@Icons.Material.Outlined.Dashboard">Administration</MudNavLink>
     <MudNavLink Href="su/dashboard" Icon="@Icons.Filled.Dangerous">Super User</MudNavLink>
 </MudNavMenu>
+@code{
+    [Parameter] public ApplicationUser CurrentUser { get; set; }
+}
