update with codeMaid

--- a/ProfileMatch.Components/Authentication/Reset.razor
+++ b/ProfileMatch.Components/Authentication/Reset.razor
@@ -1,5 +1,4 @@
-﻿
-<MudText Typo="Typo.h4" GutterBottom="true">Set new password</MudText>
+﻿<MudText Typo="Typo.h4" GutterBottom="true">Set new password</MudText>
 
 <MudTextField @bind-Value="@Password" Label="New Password" Variant="Variant.Outlined" InputType="@PasswordInput" Adornment="Adornment.End" AdornmentIcon="@PasswordInputIcon" OnAdornmentClick="TogglePasswordVisibility" Class="my-4" />
 
