--- a/ProfileMatch.Components/Dialogs/AdminUserDialog.razor
+++ b/ProfileMatch.Components/Dialogs/AdminUserDialog.razor
@@ -5,12 +5,13 @@
 else
 {
 
-    <MudItem Class="d=inline"><p>
-    <InputFile id="fileInput" OnChange="UploadFile" hidden accept="image/*" />
-    Avatar:
-    <MudButton DisableElevation="true" HtmlTag="label" for="fileInput"> <MudAvatar Image="@EditedUser.PhotoPath" /></MudButton>
-</p>
-</MudItem>
+    <MudItem Class="d=inline">
+        <p>
+            <InputFile id="fileInput" OnChange="UploadFile" hidden accept="image/*" />
+            Avatar:
+            <MudButton DisableElevation="true" HtmlTag="label" for="fileInput"> <MudAvatar Image="@EditedUser.PhotoPath" /></MudButton>
+        </p>
+    </MudItem>
     <MudDialog>
         <DialogContent>
             <MudForm @ref="Form">
@@ -25,7 +26,7 @@ else
                         <MudSelectItem Value="@(dept.Id)">@dept.Name</MudSelectItem>
                     }
                 </MudSelect>
-                
+
                 <MudSwitch @bind-Checked="@EditedUser.IsActive"
                            T="bool"
                            Label="Is Active?"
