--- a/ProfileMatch.Components/User/UserQuestionList.razor
+++ b/ProfileMatch.Components/User/UserQuestionList.razor
@@ -55,6 +55,7 @@ else
     </MudItem>
 }
 <style>
-    .mud-tabs-panels {min-height:200px!important;
+    .mud-tabs-panels {
+        min-height: 200px !important;
     }
 </style>
