added option to delete user in Super User

--- a/ProfileMatch.Components/_Imports.razor
+++ b/ProfileMatch.Components/_Imports.razor
@@ -22,3 +22,4 @@
 @using Microsoft.AspNetCore.Identity
 @using ProfileMatch.Models.ViewModels
 @using ProfileMatch.Components.User
+@using ProfileMatch.Components.SuperUser
