--- a/ProfileMatch.Sites/_Imports.razor
+++ b/ProfileMatch.Sites/_Imports.razor
@@ -18,6 +18,8 @@
 @using ProfileMatch.Components.Admin
 @using ProfileMatch.Components.User
 @using ProfileMatch.Components.Manager
+@using ProfileMatch.Components.SuperUser
+@using ProfileMatch.Components.Dialogs
 
 @using ProfileMatch.Services
 @using ProfileMatch.Contracts
