--- a/ProfileMatch.Web/_Imports.razor
+++ b/ProfileMatch.Web/_Imports.razor
@@ -18,4 +18,5 @@
 @using ProfileMatch.Sites
 @using ProfileMatch.Components.User
 @using ProfileMatch.Components.Authentication
+@using ProfileMatch.Components.SuperUser
 @attribute [Authorize]
