--- a/ProfileMatch.Sites/SuperUser/SuperUserDashboard.razor
+++ b/ProfileMatch.Sites/SuperUser/SuperUserDashboard.razor
@@ -1,1 +1,21 @@
 ﻿@page "/su/dashboard"
+<AuthorizeView>
+    <Authorized>
+        @if (@context.User.IsInRole(ADMINISTRATION_ROLE))
+        {
+            <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">Admin Dashboard</MudText>
+            <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6">
+                <MudTabPanel Text="Users">
+                    <SuperUserPeopleList />
+                </MudTabPanel>
+            </MudTabs>
+        }
+        else
+        {
+            <p>You're not signed in as a user in @ADMINISTRATION_ROLE role.</p>
+        }
+    </Authorized>
+    <NotAuthorized>
+        <p>You're not loggged in.</p>
+    </NotAuthorized>
+</AuthorizeView>
