created global localization file

--- a/ProfileMatch.Components/Admin/Administration.razor
+++ b/ProfileMatch.Components/Admin/Administration.razor
@@ -132,7 +132,7 @@
     List<ApplicationUser> ColUsers = new List<ApplicationUser>();
 
     // Options to display in the roles dropdown when editing a user
-    List<string> Options = new List<string>() { "User", "Admin", "SuperUser", "Manager" };
+    List<string> Options = new List<string>() { "User", "Admin", "Manager" };
 
     // To hold any possible errors
     string strError = "";
