--- a/ProfileMatch.Components/Layout/NavMenu.razor
+++ b/ProfileMatch.Components/Layout/NavMenu.razor
@@ -8,4 +8,6 @@
 </MudNavMenu>
 @code{
     [Parameter] public ApplicationUser CurrentUser { get; set; }
+    [Inject]
+    IStringLocalizer<LanguageService> L { get; set; }
 }
