--- a/ProfileMatch.Web/Pages/_Host.cshtml
+++ b/ProfileMatch.Web/Pages/_Host.cshtml
@@ -1,4 +1,6 @@
 ﻿@page "/"
+@using System.Globalization
+@using Microsoft.AspNetCore.Localization
 @namespace ProfileMatch.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
@@ -18,6 +20,14 @@
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
 <body>
+    @{
+        this.HttpContext.Response.Cookies.Append(
+            CookieRequestCultureProvider.DefaultCookieName,
+            CookieRequestCultureProvider.MakeCookieValue(
+                new RequestCulture(
+                    CultureInfo.CurrentCulture,
+                    CultureInfo.CurrentUICulture)));
+    }
     <component type="typeof(App)" render-mode="ServerPrerendered" />
 
     <div id="blazor-error-ui">
