--- a/ProfileMatch.Web/_Imports.razor
+++ b/ProfileMatch.Web/_Imports.razor
@@ -16,7 +16,9 @@
 @using ProfileMatch.Services
 @using ProfileMatch.Contracts
 @using ProfileMatch.Sites
+@using ProfileMatch.Pages
 @using ProfileMatch.Components.User
 @using ProfileMatch.Components.Authentication
-@using ProfileMatch.Components.SuperUser
-@attribute [Authorize]
+@using Microsoft.Extensions.Localization
+@using System.Globalization
+@using Microsoft.AspNetCore.Localization
