--- a/ProfileMatch.Components/_Imports.razor
+++ b/ProfileMatch.Components/_Imports.razor
@@ -17,9 +17,10 @@
 @using ProfileMatch.Components.Culture
 @using ProfileMatch.Components.Layout
 @using ProfileMatch.Components.Theme
-@using Microsoft.Extensions.Localization
 @using ProfileMatch.Models.Enumerations
 @using Microsoft.AspNetCore.Identity
 @using ProfileMatch.Models.ViewModels
 @using ProfileMatch.Components.User
-@using ProfileMatch.Components.SuperUser
+@using Microsoft.Extensions.Localization
+@using System.Globalization
+@using Microsoft.AspNetCore.Localization
