--- a/ProfileMatch.Sites/_Imports.razor
+++ b/ProfileMatch.Sites/_Imports.razor
@@ -18,8 +18,10 @@
 @using ProfileMatch.Components.Admin
 @using ProfileMatch.Components.User
 @using ProfileMatch.Components.Manager
-@using ProfileMatch.Components.SuperUser
 @using ProfileMatch.Components.Dialogs
+@using Microsoft.Extensions.Localization
+@using System.Globalization
+@using Microsoft.AspNetCore.Localization
 
 @using ProfileMatch.Services
 @using ProfileMatch.Contracts
