added pages - user: about, account

--- a/ProfileMatch.Components/Layout/MainLayout.razor
+++ b/ProfileMatch.Components/Layout/MainLayout.razor
@@ -17,7 +17,7 @@
             <MudText Typo="Typo.subtitle2">People Match</MudText>
         </MudHidden>
         <MudSpacer />
-        <LoginDisplay CurrentUser="@CurrentUser" />
+        <UserUserLoginDisplay CurrentUser="@CurrentUser" />
         <CultureSelector />
         <ThemeToggle />
         <MudMenu Direction="Direction.Left" OffsetX="true" Dense="true" Class="mt-1 ml-4">
