fixed double query error on admin dashboard

--- a/ProfileMatch.Sites/User/UserDashboard.razor
+++ b/ProfileMatch.Sites/User/UserDashboard.razor
@@ -2,7 +2,7 @@
 
 <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">User Dashboard</MudText>
 <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6">
-    <MudTabPanel Text="Surveys" Icon="@Icons.Filled.FactCheck"><UserQuestionList UserId="@CurrentUserId" /></MudTabPanel>
+    <MudTabPanel Text="Surveys" Icon="@Icons.Filled.FactCheck"><UserQuestionList /></MudTabPanel>
     <MudTabPanel Text="Account" Icon="@Icons.Filled.PersonOutline"><UserAccount /></MudTabPanel>
     <MudTabPanel Text="About" Icon="@Icons.Filled.PersonOutline"><UserAbout /></MudTabPanel>
     <MudTabPanel Text="Certificates" Icon="@Icons.Filled.TableChart"><UserCertList /></MudTabPanel>
