updated authentication check

--- a/ProfileMatch.Components/Layout/MainLayout.razor
+++ b/ProfileMatch.Components/Layout/MainLayout.razor
@@ -7,53 +7,75 @@
 <MudThemeProvider Theme="currentTheme" />
 <MudLayout>
     <CascadingAuthenticationState>
-        <MudAppBar Elevation="4">
-            <MudHidden Breakpoint="Breakpoint.MdAndUp">
-                <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
-            </MudHidden>
-            <MudHidden Breakpoint="Breakpoint.Xs">
-                <MudText Typo="Typo.h6" Class="ml-4">People Match</MudText>
-            </MudHidden>
-            <MudHidden Breakpoint="Breakpoint.Xs" Invert="true">
-                <MudText Typo="Typo.subtitle2">People Match</MudText>
-            </MudHidden>
-            <MudSpacer />
-            <UserUserLoginDisplay />
-            <CultureSelector />
-            <ThemeToggle />
-            <MudMenu Direction="Direction.Left" OffsetX="true" Dense="true" Class="mt-1 ml-4">
-                <ActivatorContent>
-                    <MudAvatar Image="@CurrentUser?.PhotoPath" />
-                </ActivatorContent>
-                <ChildContent>
-                    <CascadingValue Value="CurrentUser">
-                        <UserCard Class="mt-n2" />
-                    </CascadingValue>
-                    <MudDivider Class="mb-2" />
-                    <MudListItem Text="Account" Icon="@Icons.Material.Outlined.Person" Href="/user/dashboard" />
+        <AuthorizeView>
+            <Authorized>
+                <MudAppBar Elevation="4">
+                    <MudHidden Breakpoint="Breakpoint.MdAndUp">
+                        <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
+                    </MudHidden>
+                    <MudHidden Breakpoint="Breakpoint.Xs">
+                        <MudText Typo="Typo.h6" Class="ml-4">People Match</MudText>
+                    </MudHidden>
+                    <MudHidden Breakpoint="Breakpoint.Xs" Invert="true">
+                        <MudText Typo="Typo.subtitle2">People Match</MudText>
+                    </MudHidden>
+                    <MudSpacer />
+                    <UserLoginDisplay />
+                    <CultureSelector />
+                    <ThemeToggle />
+                    <MudMenu Direction="Direction.Left" OffsetX="true" Dense="true" Class="mt-1 ml-4">
+                        <ActivatorContent>
+                            <MudAvatar Image="@CurrentUser?.PhotoPath" />
+                        </ActivatorContent>
+                        <ChildContent>
+                            <CascadingValue Value="CurrentUser">
+                                <UserCard Class="mt-n2" />
+                            </CascadingValue>
+                            <MudDivider Class="mb-2" />
+                            <MudListItem Text="Account" Icon="@Icons.Material.Outlined.Person" Href="/user/dashboard" />
 
-                    <MudListItem Text="Logout" Icon="@Icons.Material.Outlined.Login">
-                        <form method="post" action="Identity/Account/LogOut">
-                            <button type="submit">Log out</button>
-                        </form>
-                    </MudListItem>
-                </ChildContent>
-            </MudMenu>
-        </MudAppBar>
-        <MudDrawer @bind-Open="@_drawerOpen" Variant="@DrawerVariant.Responsive" ClipMode="DrawerClipMode.Always">
-            <CascadingValue Value="CurrentUser">
-                <NavMenu />
-            </CascadingValue>
-        </MudDrawer>
-        <MudMainContent>
-            <MudHidden Breakpoint="Breakpoint.SmAndDown">
-                <MudToolBar DisableGutters="true">
-                    <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Inherit" OnClick="@((e) => DrawerToggle())" Class="ml-3" />
-                </MudToolBar>
-            </MudHidden>
-            <CascadingValue Value="CurrentUser">
-                @Body
-            </CascadingValue>
-        </MudMainContent>
+                            <MudListItem Text="Logout" Icon="@Icons.Material.Outlined.Login">
+                                <form method="post" action="Identity/Account/LogOut">
+                                    <button type="submit">Log out</button>
+                                </form>
+                            </MudListItem>
+                        </ChildContent>
+                    </MudMenu>
+                </MudAppBar>
+                <MudDrawer @bind-Open="@_drawerOpen" Variant="@DrawerVariant.Responsive" ClipMode="DrawerClipMode.Always">
+                    <CascadingValue Value="CurrentUser">
+                        <NavMenu />
+                    </CascadingValue>
+                </MudDrawer>
+                <MudMainContent>
+                    <MudHidden Breakpoint="Breakpoint.SmAndDown">
+                        <MudToolBar DisableGutters="true">
+                            <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Inherit" OnClick="@((e) => DrawerToggle())" Class="ml-3" />
+                        </MudToolBar>
+                    </MudHidden>
+                    <CascadingValue Value="CurrentUser">
+                        @Body
+                    </CascadingValue>
+                </MudMainContent>
+            </Authorized>
+            <NotAuthorized>
+                <MudLayout>
+
+                    <MudAppBar Dense="true">
+                        <MudSpacer />
+                        <CultureSelector />
+                        <ThemeToggle />
+                    </MudAppBar>
+                    <MudContainer MaxWidth="MaxWidth.Small" Class="d-flex align-center" Style="height: 100vh;">
+                        <div class="d-flex flex-column mud-width-full">
+
+                            <MudPaper Elevation="25" Class="pa-7" Width="100%" MaxWidth="500px">
+                               <UserLoginDisplay/>
+                            </MudPaper>
+                        </div>
+                    </MudContainer>
+                </MudLayout>
+            </NotAuthorized>
+        </AuthorizeView>
     </CascadingAuthenticationState>
 </MudLayout>
