--- a/ProfileMatch.Sites/Manager/ManagerDashboard.razor
+++ b/ProfileMatch.Sites/Manager/ManagerDashboard.razor
@@ -1,6 +1,13 @@
 ﻿@page "/manager/dashboard"
-<MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">Manager Dashboard</MudText>
-<MudTabs Elevation="1" Rounded="true" PanelClass="mt-6">
-    <MudTabPanel Text="Projects"></MudTabPanel>
-    <MudTabPanel Text="Compare"><ManagerTestTable /></MudTabPanel>
-</MudTabs>
+    <AuthorizeView Roles="Manager, Admin">
+        <Authorized>
+            <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">Manager Dashboard</MudText>
+            <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6">
+                <MudTabPanel Text="Projects"></MudTabPanel>
+                <MudTabPanel Text="Compare"><ManagerTestTable /></MudTabPanel>
+            </MudTabs>
+        </Authorized>
+        <NotAuthorized>
+            <p>Sorry, this content is restricted.</p>
+        </NotAuthorized>
+    </AuthorizeView>
