updated login page

--- a/ProfileMatch.Web/Pages/Shared/_Layout.cshtml
+++ b/ProfileMatch.Web/Pages/Shared/_Layout.cshtml
@@ -8,14 +8,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ProfileMatch</title>
-    <link rel="stylesheet" href="~/Identity/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/Identity/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/Identity/css/site.css" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-light navbar-toggleable-sm bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-dark navbar-toggleable-sm bg-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" href="~/">ProfileMatch</a>
+                <a class="navbar-brand" href="~/">Profile Match</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -46,12 +47,13 @@
     </div>
     <footer class="footer border-top text-muted">
         <div class="container">
-            &copy; 2021 - ProfileMatch - <a asp-area="" asp-page="Privacy">Privacy</a>
+            &copy; 2021 - Profile Match @*- <a asp-area="" asp-page="Privacy">Privacy</a>*@
         </div>
     </footer>
     <script src="~/Identity/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/Identity/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/Identity/js/site.js" asp-append-version="true"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
