--- a/ProfileMatch.Components/Authentication/Register.razor
+++ b/ProfileMatch.Components/Authentication/Register.razor
@@ -1,5 +1,4 @@
-﻿
-<MudText Typo="Typo.h4" GutterBottom="true">Sign Up</MudText>
+﻿<MudText Typo="Typo.h4" GutterBottom="true">Sign Up</MudText>
 
 <MudTextField T="string" Label="Username" Variant="Variant.Outlined" Class="my-4"></MudTextField>
 
