--- a/ProfileMatch.Components/Dialogs/AdminUserDialog.razor
+++ b/ProfileMatch.Components/Dialogs/AdminUserDialog.razor
@@ -1,4 +1,4 @@
-﻿@if (EditedUser == null || Departments == null || currentUser == null)
+﻿@if (EditedUser == null || Departments == null)
 {
     <p>loading</p>
 }
