--- a/ProfileMatch.Components/User/UserAccount.razor
+++ b/ProfileMatch.Components/User/UserAccount.razor
@@ -1,6 +1,4 @@
-﻿
-
-<MudGrid>
+﻿<MudGrid>
     <MudItem xs="12" sm="4" md="3">
         <MudCard>
             <MudCardHeader>
@@ -16,7 +14,6 @@
                             <MudIcon Icon="@AvatarIcon" Size="Size.Large"></MudIcon>
                         }
                     </MudAvatar>
-
                 </div>
                 <MudText Align="Align.Center">@CurrentUser?.FirstName @CurrentUser?.LastName</MudText>
                 <MudText Align="Align.Center">@CurrentUser?.JobTitle</MudText>
@@ -64,5 +61,3 @@
         </MudCard>
     </MudItem>
 </MudGrid>
-
-
