--- a/ProfileMatch.Components/User/UserAbout.razor
+++ b/ProfileMatch.Components/User/UserAbout.razor
@@ -1,13 +1,8 @@
-﻿
-
-
-
-<MudGrid>
+﻿<MudGrid>
 
     <MudItem xs="12" sm="8" md="8">
         <MudCard>
             <MudCardHeader>
-
             </MudCardHeader>
             <MudCardContent>
                 <MudGrid>
@@ -32,9 +27,7 @@
     </MudItem>
 </MudGrid>
 
-
 <br>
-
 
 <MudExpansionPanels MultiExpansion="true">
     <MudExpansionPanel Text="What is impotrant to me at work">
@@ -63,4 +56,3 @@
         <MudListItem Text="Single List Item" Icon="@Icons.Filled.Bookmark" IconColor="Color.Secondary" />
     </MudExpansionPanel>
 </MudExpansionPanels>
-
